# bevy-template-old

./: Cargo.toml  ChangeLog.md  License-MIT.md  LicenseMIT.md  ReadMe.md  Trunk.toml  bevy-template-d1e1adabc1b4653b.js  index.html
.cargo/: config.toml
.github/workflows/: main.yml
web/: index.html
