[package]
name = "bevy-template"
description = "A game template developed using the Bevy engine."
version = "0.0.0"
authors = ["jngo102@aim.com"]
repository = "https://github.com/Ngo-Projects/bevy-template"
edition = "2021"
license = "MIT"
readme = "ReadMe.md"
rust-version = "1.76.0"

[dependencies]
bevy = { version = "^0", default-features = false, features = [
  "animation",
  "asset_processor",
  "bevy_animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_dynamic_plugin",
  "bevy_gilrs",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "embedded_watcher",
  "file_watcher",
  "multi-threaded",
  "png",
  "serialize",
  "shader_format_glsl",
  "shader_format_spirv",
  "wav",
  # "wayland",
  "x11",
] }
bevy_rapier2d = { version = "^0", features = [
  "debug-render-2d",
  "enhanced-determinism",
  "parallel",
  "serde-serialize",
  "wasm-bindgen",
] }
leafwing-input-manager = "^0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
